
This file shows the changes in recent releases of MODx. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#3511], [#2964], [#3601] Fix issues regarding form customization and Templates by removing ajax loading of TVs in Resource panels
- Consolidate JS for derivative Resource panels to allow to inherit from main Resource panel
- Add context param to modx.getParentIds
- [#3754] Ensure Resources can not have their parent set as one of their descendants
- Add context param to modX.getChildIds
- [#3612] Improve CDATA filter to not add spaces at beginning or end
- [#3764] Add delete to actionbar on Resource edit panel
- [#3585] Add description field to modUserGroup
- [#3020] Improve trees to expand node on click if no href target is set for tree node
- [#4006] Show children count rather than IDs on categories in element tree to lessen id ambiguity
- Fix issue where Quick Create was not respecting unchecked setting checkboxes
- [#3673] Add "Save and Close" button to quick update windows
- [#3970] Ensure extension is lowercased before checking for allowed status when uploading files
- [#3920] Ensure modPHPMailer resets replyTo and custom header fields
- Add UI for managing Resource uri and uri_override fields
- Remove all deprecated methods and variables scheduled for removal in next minor release
- Change modxcms.com references to modx.com
- [#3898] Prevent any non-integer being set in ?a= in mgr interface
- [#3926] Ensure security/user/create processor can take in a class_key parameter to set class_key for SSO
- Improve user processors event handling to allow for better SSO integration that can stop save/remove/update
- Refactor password reset not to send password hash as activation key
- [#325] Allow configurable user password hashing with PBKDF2 default implementation
- [#3111] Fix bug causing unnecessary writes to Resource cache files
- Update xPDO to v2.1.1-pl2